--- a/user-service/src/main/resources/application-prod.yaml
+++ b/user-service/src/main/resources/application-prod.yaml
@@ -11,3 +11,6 @@ spring:
     username: ${DB_USER}
     password: ${DB_PASSWD}
     driverClassName: org.postgresql.Driver
+
+url:
+    movie-service: ${MOVIE_SERVICE_URL}
